test/compile-fail/resolution/conflicts/entity/top.rhdl
entity Top {
    in clk: x,
    out clk: x
}
struct x {}